<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".UI.REGISTER.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:padding="7dp"
        tools:ignore="UselessParents">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/container"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/signup_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_20"
                    android:background="@color/Grey"
                    app:cardCornerRadius="@dimen/margin_10"
                    app:cardElevation="@dimen/margin_10">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:padding="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="SIGN-UP"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:fontFamily="serif-monospace"
                            android:textSize="25sp"/>

                        <com.google.android.material.textfield.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edit_box_size"
                            android:layout_marginStart="@dimen/margin_15"
                            android:layout_marginTop="@dimen/margin_10"
                            android:layout_marginEnd="15dp"
                            app:boxStrokeColor="@color/white">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/First_Name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:inputType="text"
                                android:hint="@string/firstname" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edit_box_size"
                            android:layout_marginStart="@dimen/margin_15"
                            android:layout_marginTop="@dimen/margin_10"
                            android:layout_marginEnd="15dp"
                            app:boxStrokeColor="@color/white">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/MiddleName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:textColor="@color/white"
                                android:hint="@string/midname" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edit_box_size"
                            android:layout_marginStart="@dimen/margin_15"
                            android:layout_marginTop="@dimen/margin_10"
                            android:layout_marginEnd="15dp"
                            app:boxStrokeColor="@color/white">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/lastname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:textColor="@color/white"
                                android:hint="@string/lastname" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edit_box_size"
                            android:layout_marginStart="@dimen/margin_15"
                            android:layout_marginTop="@dimen/margin_10"
                            android:layout_marginEnd="15dp"
                            app:boxStrokeColor="@color/white">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/cell"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:textColor="@color/white"
                                android:hint="@string/number" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edit_box_size"
                            android:layout_marginStart="@dimen/margin_15"
                            android:layout_marginTop="@dimen/margin_10"
                            android:layout_marginEnd="15dp"
                            app:boxStrokeColor="@color/white">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:textColor="@color/white"
                                android:hint="@string/emailhint" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edit_box_size"
                            android:layout_marginStart="@dimen/margin_15"
                            android:layout_marginTop="@dimen/margin_10"
                            android:layout_marginEnd="15dp"
                            app:boxStrokeColor="@color/white">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/Pass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:textColor="@color/white"
                                android:hint="@string/passwordhint" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edit_box_size"
                            android:layout_marginStart="@dimen/margin_15"
                            android:layout_marginTop="@dimen/margin_10"
                            android:layout_marginEnd="15dp"
                            app:boxStrokeColor="@color/white">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/cnfpass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:textColor="@color/white"
                                android:hint="@string/passwordconf" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/margin_20"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Already have an account ? "
                                android:textAlignment="center"
                                android:textColor="@color/lightGrey"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/login_page"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/login_title"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="30dp"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="@dimen/margin_80"
                android:layout_height="@dimen/margin_80"
                android:paddingTop="@dimen/margin_20"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-60dp"
                android:gravity="center"
                android:padding="@dimen/margin_10"
                android:id="@+id/signin_submit"
                android:background="@drawable/gradient_circle"
                android:layout_below="@+id/container">

                <ImageView
                    android:layout_width="@dimen/margin_60"
                    android:layout_height="@dimen/margin_60"
                    android:padding="@dimen/margin_10"
                    android:background="@drawable/circle_shape"
                    android:src="@drawable/arrow_forward_24"
                    />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>

</LinearLayout>